# Agent-MCP

./: .gitignore  AGENTS.md  CLAUDE.md  KNOWLEDGE_GRAPH.md  README.md  codex_prompt_mcp_agents_registry.md  config.yaml  config.yaml.example  infographic.html  pyproject.toml  server.py
docs/: AgentMCP_New_Imp_Plan.html
docs/superpowers/plans/: 2026-06-09-memory-proposals.md
docs/superpowers/specs/: 2026-06-09-memory-proposals-design.md  2026-06-21-help-reference-panel-design.md
mcp_agents_registry/: __init__.py  cache.py  config.py  inventory_store.py  models.py  parser.py  prompts.py  proposals.py  registry.py  resolver.py  resources.py  scanner.py  server.py  utils.py  web.py
mcp_agents_registry/web_assets/static/: app.js  styles.css
mcp_agents_registry/web_assets/templates/: admin.html
tests/: test_admin_ui_static.py  test_inventory.py  test_parser.py  test_proposals.py  test_registry.py  test_scanner.py  test_web.py  test_web_proposals.py
