[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mcp-agents-registry"
version = "0.1.0"
description = "A local MCP server that indexes and resolves AGENTS.md files across project roots."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Jamie Scott" }
]
dependencies = [
  "mcp>=1.2.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
web = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

[project.scripts]
mcp-agents-registry = "mcp_agents_registry.server:main"
mcp-agents-registry-web = "mcp_agents_registry.web:main"

[tool.hatch.build.targets.wheel]
packages = ["mcp_agents_registry"]
